--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -148,7 +148,7 @@
 
     $(function () {
         $('#datetimepicker1').datetimepicker({
-            format: 'L'
+            format: 'YYYY-MM-DD'
         });
 
         $('#datetimepicker2').datetimepicker({
