fixed logout url

--- a/src/main/resources/templates/spiritdirectortable.html
+++ b/src/main/resources/templates/spiritdirectortable.html
@@ -75,8 +75,9 @@
 
                                     <div class="dropdown-divider"></div>
 
-                                    <a class="dropdown-item" th:href="@{/login}">
+                                    <a class="dropdown-item" th:href="@{/logout}">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
+                                </div>
                             </div>
                         </li>
                     </ul>
