--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -62,10 +62,8 @@
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Profile</a>
 
                                     <div class="dropdown-divider"></div>
-                                    <form method="post" th:action="@{/logout}">
-                                        <a class="dropdown-item" th:href="@{/login}">
+                                        <a class="dropdown-item" th:href="@{/logout}">
                                             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
-                                    </form>
                                 </div>
                             </div>
                         </li>
