--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -61,7 +61,7 @@
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Profile</a>
 
                                     <div class="dropdown-divider"></div>
-                                        <a class="dropdown-item" th:href="@{/login}">
+                                        <a class="dropdown-item" th:href="@{/logout}">
                                         <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                 </div>
                             </div>
