--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -26,8 +26,6 @@
             var calendarEl = document.getElementById('calendar');
             var calendar = new FullCalendar.Calendar(calendarEl, {
                 headerToolbar: {
-                    left: 'dayGridMonth,timeGridWeek,timeGridDay',
-                    center: 'title',
                     right: 'prev,next'
                 },
                 events: [],
@@ -92,8 +90,7 @@
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Profile</a>
 
                                     <div class="dropdown-divider"></div>
-                                    <form method="post" th:action="@{/logout}">
-                                        <a class="dropdown-item" th:href="@{/login}">
+                                        <a class="dropdown-item" th:href="@{/logout}">
                                             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                 </div>
                             </div>
