--- a/src/main/resources/templates/eventmanagement.html
+++ b/src/main/resources/templates/eventmanagement.html
@@ -165,7 +165,11 @@
                                                 th:attr="data-target=${'#eventEditModal' + event.id}"
                                                 data-row="${event}"
                                         >Edit</button>
-                                        <button class="btn btn-primary" type="button" style="margin-left: 0px;margin-right: 5px;background: var(--purple);">Assign</button>
+                                        <button class="btn btn-primary"
+                                                type="button"
+                                                style="margin-left: 0px;margin-right: 5px;background: var(--purple);"
+                                                data-toggle="modal"
+                                                th:attr="data-target=${'#assignSuperFrogModal' + event.id}">Assign</button>
                                         <a th:href="@{/eventmanagement/finish/__${event.id}__}"><button class="btn btn-primary" type="button" style="margin-left: 0px;margin-right: 5px;background: var(--green);">Finished</button></a>
                                     </td>
                                 </tr>
@@ -193,38 +197,37 @@
                         <div class="table-responsive table mt-2" id="dataTable-3" role="grid" aria-describedby="dataTable_info">
                             <table class="table my-0" id="dataTable">
                                 <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Title</th>
-                                    <th>Date</th>
-                                    <th>Start Time</th>
-                                    <th>End Time</th>
-                                    <th>Creator</th>
-                                    <th>SuperFrog</th>
-                                </tr>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Title</th>
+                                        <th>Date</th>
+                                        <th>Start Time</th>
+                                        <th>End Time</th>
+                                        <th>Creator</th>
+                                        <th>SuperFrog</th>
+                                    </tr>
                                 </thead>
                                 <tbody>
-                                <tr th:each="event: ${finishedEvents}">
-                                    <td th:text="${event.id}">1</td>
-                                    <td th:text="${event.title}">Mark&#39;s Birthday</td>
-                                    <td th:text="${event.date}">5-4-2021</td>
-                                    <td th:text="${event.startTime}">12:00 PM</td>
-                                    <td th:text="${event.endTime}">1:00 PM</td>
-                                    <td th:text="${event.requestingUserEmail}">mark.mcdaniel.tcu.edu</td>
-                                    <td th:text="${event.assignedSuperFrogId}">superfrog@gmail.com</td>
-                                </tr>
-                                <tr></tr>
+                                    <tr th:each="event: ${finishedEvents}">
+                                        <td th:text="${event.id}"></td>
+                                        <td th:text="${event.title}"></td>
+                                        <td th:text="${event.date}"></td>
+                                        <td th:text="${event.startTime}"></td>
+                                        <td th:text="${event.endTime}"></td>
+                                        <td th:text="${event.requestingUserEmail}"></td>
+                                        <td th:text="${event.assignedSuperFrogEmail}"></td>
+                                    </tr>
                                 </tbody>
                                 <tfoot>
-                                <tr>
-                                    <td><strong>ID</strong></td>
-                                    <td><strong>Title</strong></td>
-                                    <td><strong>Date</strong></td>
-                                    <td><strong>Start Time</strong></td>
-                                    <td><strong>End Time</strong></td>
-                                    <td><strong>Creator</strong></td>
-                                    <td><strong>SuperFrog</strong></td>
-                                </tr>
+                                    <tr>
+                                        <td><strong>ID</strong></td>
+                                        <td><strong>Title</strong></td>
+                                        <td><strong>Date</strong></td>
+                                        <td><strong>Start Time</strong></td>
+                                        <td><strong>End Time</strong></td>
+                                        <td><strong>Creator</strong></td>
+                                        <td><strong>SuperFrog</strong></td>
+                                    </tr>
                                 </tfoot>
                             </table>
                         </div>
@@ -322,7 +325,48 @@
             </div>
 
 <!--            Assign SuperFrog Modal-->
-
+            <div role="dialog"
+                 tabindex="-1"
+                 class="modal fade show"
+                 style="max-width: 500px; position: fixed; left: 50%; top: 50%; transform: translate(-50%, -50%); overflow-y: auto;"
+                 th:each="event: ${approvedEvents}"
+                 th:attr="id=${'assignSuperFrogModal' + event.id}">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Assign a SuperFrog</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>First Name</th>
+                                        <th>Last Name</th>
+                                        <th class="text-center">Assign</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="superfrog: ${activeSuperFrogs}">
+                                        <td th:text="${superfrog.id}"></td>
+                                        <td th:text="${superfrog.firstName}"></td>
+                                        <td th:text="${superfrog.lastName}"></td>
+                                        <td class="text-center">
+                                            <form th:action="@{/eventmanagement/assign/__${event.id}__/__${superfrog.id}__}" method="post">
+                                                <button class="btn btn-primary" type="submit" style="background: var(--purple);">Assign</button>
+                                            </form>
+                                        </td>
+                                    </tr>
+                                    <tr></tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <!--        Footer-->
         <footer class="bg-white sticky-footer">
             <div class="container my-auto">
