--- a/src/main/resources/templates/update_success.html
+++ b/src/main/resources/templates/update_success.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Register Successed- SuperFrog Scheduler</title>
+    <title>Update Successed- SuperFrog Scheduler</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
@@ -31,7 +31,7 @@
                         <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                    <h4 class="text-dark mb-4">You have signed up sucessful. Login to your account now!</h4>
+                                    <h4 class="text-dark mb-4">Your account have updated successfull. Login again to your account!</h4>
                                 </div>
                                 <div class="text-center"><a class="small" th:href="@{/login}">Login!</a> </div>
                             </div>
