modify dashboard position + hide password when changing

--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -63,7 +63,6 @@
                 <li class="nav-item"><a class="nav-link active" th:href="@{/calendar}"><i class="fa fa-calendar"></i><span>Calendar</span></a></li>
                 <li sec:authorize="hasAuthority('SPIRITDIRECTOR')" class="nav-item"><a class="nav-link" th:href="@{/spiritdirectortable}"><i class="fas fa-table"></i><span>Manage Users</span></a></li>
                 <li sec:authorize="hasAuthority('SPIRITDIRECTOR')" class="nav-item"><a class="nav-link" th:href="@{/eventmanagement}"><i class="fas fa-table"></i><span>Manage Events</span></a></li>
-                <li class="nav-item"><a class="nav-link" th:href="@{/dashboard}"><i class="far fa-user-circle"></i><span>Dashboard</span></a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{tcuevent}"><i class="fas fa-user-circle"></i><span>Tcu Event</span></a></li>
                 <li class="nav-item"></li>
             </ul>
@@ -87,7 +86,9 @@
                                 <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                                     <a class="dropdown-item" th:href="@{/profile}">
                                         <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>Profile</a>
-
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" th:href="@{/dashboard}">
+                                        <i class="fas fa-chart-line fa-sm fa-fw mr-2 text-gray-400"></i> Dashboard</a>
                                     <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" th:href="@{/logout}">
                                             <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
