add cancel button to change user/pwd

--- a/src/main/resources/templates/changepwd.html
+++ b/src/main/resources/templates/changepwd.html
@@ -117,6 +117,10 @@
                                                         style="background: var(--purple);">
                                                     Update
                                                 </button>
+                                                <a th:href="@{/profile}">
+                                                    <button class="btn btn-primary btn-sm" type="button" style="background: var(--purple);"> Cancel
+                                                    </button>
+                                                </a>
                                             </div>
                                         </form>
                                     </div>
