--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -30,6 +30,7 @@
                 <li class="nav-item"><a class="nav-link" th:href="@{/}"><i class="fa fa-home"></i><span>Home</span></a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{/calendar}"><i class="fa fa-calendar"></i><span>Calendar</span></a></li>
                 <li sec:authorize="hasAuthority('SPIRITDIRECTOR')" class="nav-item"><a class="nav-link" th:href="@{/spiritdirectortable}"><i class="fas fa-table"></i><span>Manage Users</span></a></li>
+                <li sec:authorize="hasAuthority('SUPERFROG')" class="nav-item"><a class="nav-link active" th:href="@{/superfrogtable}"><i class="fas fa-table"></i><span>Manage Users</span></a></li>
                 <li sec:authorize="hasAuthority('SPIRITDIRECTOR')" class="nav-item"><a class="nav-link" th:href="@{/eventmanagement}"><i class="fas fa-table"></i><span>Manage Events</span></a></li>
                 <li class="nav-item"><a class="nav-link" th:href="@{tcuevent}"><i class="fas fa-user-circle"></i><span>Tcu Event</span></a></li>
                 <li class="nav-item"></li>
